[package]
name = "dispenser-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rsa = "*"
pear_codegen = "*"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
dotenv = "*"
redis = "*"
redis-derive = "*"
tokio = { version = "1", features = ["full"] }
chrono = "*"
chrono-tz ="*"
futures = "*"

[dependencies.rocket_db_pools]
version = "=0.1.0-rc.3"
features = ["deadpool_redis","mongodb"]

